[tool.poetry]
name = "ccsniffpiper"
version = "0.0.2"
description = "Live Packet Sniffer to Wireshark bridge for IEEE 802.15.4 networks."
authors = ["Grant China <grant@ibisnetworks.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
pyusb = "*"
pyinstaller = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
